# podcast-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  generate.py  pyproject.toml  requirements-parler.txt  requirements.txt
.code_quality/: mypy.ini
examples/: sample_podcast.txt  sample_script.txt  sample_source.txt
src/podcast_playground/: __init__.py  __main__.py  api.py  core.py  script.py
src/podcast_playground/engines/: __init__.py  bark.py  base.py  edge.py  parler.py
