[tool.poetry]
name = "podcast-playground"
version = "0.1.0"
description = "Generate podcast-style audio locally with multiple free TTS engines"
readme = "README.md"
license = "MIT"
keywords = [
    "podcast",
    "tts",
    "text-to-speech",
    "audio",
    "edge-tts",
    "bark",
    "parler-tts",
    "ai",
    "speech-synthesis",
    "podcast-generator",
    "notebooklm",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
packages = [{include = "podcast_playground", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
soundfile = ">=0.12.0"
numpy = ">=1.24.0"
edge-tts = {version = "*", optional = true}
pydub = {version = "*", optional = true}
bark-ml = {version = "*", optional = true}
torch = {version = ">=2.1.0", optional = true}
parler-tts = {version = ">=0.2.0", optional = true}
transformers = {version = ">=4.43.0", optional = true}

[tool.poetry.extras]
edge = ["edge-tts", "pydub"]
bark = ["bark-ml", "torch"]
parler = ["parler-tts", "transformers", "torch"]
all = ["edge-tts", "pydub", "bark-ml", "torch", "parler-tts", "transformers"]

[tool.poetry.scripts]
podcast-playground = "podcast_playground.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
