[tool.poetry]
name = "podcast-playground"
version = "0.1.0"
description = "Generate podcast-style audio locally with multiple free TTS engines"
readme = "README.md"
license = "MIT"
keywords = [
    "podcast",
    "tts",
    "text-to-speech",
    "audio",
    "edge-tts",
    "bark",
    "parler-tts",
    "ai",
    "speech-synthesis",
    "podcast-generator",
    "notebooklm",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
packages = [{include = "podcast_playground", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
soundfile = ">=0.12.0"
numpy = ">=1.24.0,<2"
edge-tts = "*"
pydub = "*"
torch = "2.2.2"
parler-tts = "0.2.3"
transformers = "4.46.1"
accelerate = "*"
descript-audio-codec-unofficial = "*"
descript-audiotools-unofficial = "*"
sentencepiece = "*"
protobuf = ">=4.0.0"
fastapi = "*"
uvicorn = {version = "*", extras = ["standard"]}

[tool.poetry.scripts]
podcast-playground = "podcast_playground.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
